--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.9",
+    "@types/uuid": "^8.0.0",
     "axios": "^0.19.2",
     "chess.js": "^0.11.0",
     "chessboardjsx": "^2.4.2",
+    "js-chess-engine": "^0.5.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
     "redux-thunk": "^2.3.0",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "uuid": "^8.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
